--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -1,6 +1,7 @@
-<single-spa-router>
-  <main>
+<single-spa-router base="/" disableWarnings>
+  <main id="container">
     <route default>
     </route>
   </main>
+  
 </single-spa-router>
