Se realiza la correccion del core para que el footer quede en la parte de abajo. udistrital/Cumplidos_y_certificaciones_documentacion#69

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -3,5 +3,8 @@
     <route default>
     </route>
   </main>
-  
+
+  <div id="core">
+    <application name="@udistrital/core-mf" props="environment"></application>
+  </div>
 </single-spa-router>
