feature: se finaliza con la creacion del root y la implementacion del menu

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -1,6 +1,7 @@
 <single-spa-router base="/" disableWarnings>
   <main id="container">
     <route default>
+      <application name="@udistrital/proveedores1" props="environment"></application>
     </route>
   </main>
 
