feature: se ajusta el layout

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -1,7 +1,10 @@
 <single-spa-router base="/" disableWarnings>
   <main id="container">
     <route default>
-      <application name="@udistrital/proveedores1" props="environment"></application>
+      <application
+        name="@udistrital/revision-cumplido-prov-mf"
+        props="environment"
+      ></application>
     </route>
   </main>
 
